[gd_scene load_steps=9 format=2]

[ext_resource path="res://hud/Healthbar.tscn" type="PackedScene" id=1]
[ext_resource path="res://hud/HudTheme.theme" type="Theme" id=2]
[ext_resource path="res://hud/Hud.gd" type="Script" id=3]
[ext_resource path="res://hud/PlayerBar.tres" type="Texture" id=4]
[ext_resource path="res://hud/HudHeart.tres" type="Texture" id=5]
[ext_resource path="res://textures/Items and HUD.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 6 )
region = Rect2( 82, 17, 14, 14 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 6 )
region = Rect2( 98, 17, 13, 14 )

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 2.0
margin_bottom = 95.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 485.0
margin_bottom = 67.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 512.0
margin_bottom = 15.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 90.0
margin_bottom = 15.0
theme = ExtResource( 2 )
text = "SCORE-"

[node name="Score" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 94.0
margin_right = 184.0
margin_bottom = 15.0
text = "000000"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 188.0
margin_right = 278.0
margin_bottom = 15.0
text = " TIME "

[node name="Time" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 282.0
margin_right = 342.0
margin_bottom = 15.0
text = "0000"

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 346.0
margin_right = 451.0
margin_bottom = 15.0
text = " STAGE "

[node name="Stage" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 455.0
margin_right = 485.0
margin_bottom = 15.0
text = "00"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 512.0
margin_bottom = 67.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_right = 297.0
margin_bottom = 48.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_right = 297.0
margin_bottom = 15.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer"]
margin_right = 105.0
margin_bottom = 15.0
text = "PLAYER "

[node name="PlayerHealth" parent="VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 109.0
margin_right = 297.0
margin_bottom = 15.0
size_flags_horizontal = 3
size_flags_vertical = 3
isPlayer = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer"]
margin_top = 19.0
margin_right = 297.0
margin_bottom = 34.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2"]
margin_right = 105.0
margin_bottom = 15.0
text = "ENEMY  "

[node name="EnemyHealth" parent="VBoxContainer/HBoxContainer2/VBoxContainer/HBoxContainer2" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 109.0
margin_right = 297.0
margin_bottom = 15.0

[node name="Spacer2" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_left = 301.0
margin_right = 302.0
margin_bottom = 48.0
rect_min_size = Vector2( 1, 0 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 306.0
margin_right = 354.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 0
size_flags_vertical = 3
texture = ExtResource( 4 )
expand = true

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/HBoxContainer2/TextureRect"]
margin_left = 4.0
margin_top = 4.0
margin_right = 44.0
margin_bottom = 44.0
color = Color( 0, 0, 0, 1 )

[node name="Weapon" type="TextureRect" parent="VBoxContainer/HBoxContainer2/TextureRect/ColorRect"]
margin_left = 2.0
margin_top = 2.0
margin_right = 38.0
margin_bottom = 38.0
expand = true
stretch_mode = 5

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_left = 358.0
margin_right = 359.0
margin_bottom = 48.0
rect_min_size = Vector2( 1, 0 )

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2"]
margin_left = 363.0
margin_right = 432.0
margin_bottom = 48.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_right = 69.0
margin_bottom = 16.0
alignment = 2

[node name="HeartTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 20.0
margin_right = 35.0
margin_bottom = 15.0
text = "-"

[node name="Hearts" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer"]
margin_left = 39.0
margin_right = 69.0
margin_bottom = 15.0
text = "00"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/VBoxContainer2"]
margin_top = 20.0
margin_right = 69.0
margin_bottom = 35.0
alignment = 2

[node name="PLabel" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2"]
margin_left = 5.0
margin_right = 35.0
margin_bottom = 15.0
mouse_filter = 0
text = "P-"

[node name="Lives" type="Label" parent="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2"]
margin_left = 39.0
margin_right = 69.0
margin_bottom = 15.0
text = "00"

[node name="DoubleShot" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 436.0
margin_right = 472.0
margin_bottom = 48.0
rect_min_size = Vector2( 36, 36 )
texture = SubResource( 1 )
stretch_mode = 5

[node name="TripleShot" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
margin_left = 476.0
margin_right = 512.0
margin_bottom = 48.0
rect_min_size = Vector2( 36, 36 )
texture = SubResource( 2 )
stretch_mode = 5

[connection signal="gui_input" from="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer/HeartTexture" to="." method="_on_HeartTexture_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer2/VBoxContainer2/HBoxContainer2/PLabel" to="." method="_on_PLabel_gui_input"]
